--- a/src/main/resources/templates/products.html
+++ b/src/main/resources/templates/products.html
@@ -40,7 +40,7 @@
 					step="1" th:placeholder="${discountValue}" th:value="*{discountV}"
 					name="value" /> <input type="hidden" name="currentURL"
 					th:value="${currentURL}" />
-				<button type="submit" value="submit" th:text="#{addBasket}"></button>
+				<button type="submit" value="submit" th:text="ENTER"></button>
 			</form>
 		</div>
 	</section>
