--- a/src/main/resources/templates/basket.html
+++ b/src/main/resources/templates/basket.html
@@ -16,7 +16,7 @@
 	href="//netdna.bootstrapcdn.com/bootstrap/3.1.0/css/bootstrap.min.css"
 	rel="stylesheet" id="bootstrap-css">
 </head>
-<style>
+<!--  <style>
 input[type='number']::-webkit-inner-spin-button, input[type='number']::-webkit-outer-spin-button
 	{
 	opacity: 1;
@@ -25,7 +25,7 @@ input[type='number']::-webkit-inner-spin-button, input[type='number']::-webkit-o
 	margin: 0;
 	-moz-appearance: textfield !important;
 }
-</style>
+</style>-->
 <body>
 	<main class="page">
 		<section class="shopping-cart dark">
@@ -95,28 +95,13 @@ input[type='number']::-webkit-inner-spin-button, input[type='number']::-webkit-o
 														</div>
 
 														<div class="col-md-4 quantity">
-															<form id="quantityForm" th:action="@{/changeQuantity/{quantityValue}}"
+															<form id="quantityForm" th:action="@{/changeQuantity}"
 																th:method="patch">
-																<div class="input-group quantity-wrapper">
-																	<input type="hidden" name="productId"
-																		th:value="${basketProduct.productId}"> <input
-																		type="hidden" th:value="-1" name="quantityValue"
-																		id="minus-input"> <span
-																		class="input-group-btn">
-																		<button type="submit" value="submit"
-																			class="btn btn-info" id="minus-button" disabled="disabled">-</button>
-
-																	</span> <input type="number" name="quantityController"
-																		class="form-control input-number quantity-style"
-																		th:value="${basketProduct.quantity}" min="0">
-
-																	<input type="hidden" name="quantityValue" th:value="1"
-																		id="plus-input" disabled="disabled"> <span
-																		class="input-group-btn">
-																		<button type="submit" value="submit"
-																			class="btn btn-info" id="plus-button">+</button>
-																	</span>
-																</div>
+																<input type="hidden" name="productId"
+																	th:value="${basketProduct.productId}"> <input
+																	type="number" id="quantityValue"
+																	th:name="quantityValue" min="0" max="100"
+																	th:value="${basketProduct.quantity}">
 															</form>
 														</div>
 
@@ -155,15 +140,14 @@ input[type='number']::-webkit-inner-spin-button, input[type='number']::-webkit-o
 								</form>
 								<a th:href="@{/main}">
 									<button type="submit" value="submit" class="btn btn-info">[[#{mainPage}]]</button>
-								</a>
-								<br>
-								<br>
+								</a> <br> <br>
 								<form th:action="@{/applyCartDiscount}" th:method="post">
 									<input class="form-control-lg" type="number" min="0" max="100"
 										step="1" th:placeholder="${discountValue}"
 										th:value="*{discountV}" name="value" /> <input type="hidden"
 										name="currentURL" th:value="${currentURL}" />
-									<button type="submit" value="submit" class="btn btn-info" th:text="ENTER"></button>
+									<button type="submit" value="submit" class="btn btn-info"
+										th:text="ENTER"></button>
 								</form>
 							</div>
 						</div>
