--- a/src/main/resources/templates/basket.html
+++ b/src/main/resources/templates/basket.html
@@ -16,7 +16,7 @@
 	href="//netdna.bootstrapcdn.com/bootstrap/3.1.0/css/bootstrap.min.css"
 	rel="stylesheet" id="bootstrap-css">
 </head>
-<!--  <style>
+  <style>
 input[type='number']::-webkit-inner-spin-button, input[type='number']::-webkit-outer-spin-button
 	{
 	opacity: 1;
@@ -25,7 +25,7 @@ input[type='number']::-webkit-inner-spin-button, input[type='number']::-webkit-o
 	margin: 0;
 	-moz-appearance: textfield !important;
 }
-</style>-->
+</style>
 <body>
 	<main class="page">
 		<section class="shopping-cart dark">
