Add filter by shopName

--- a/src/main/resources/static/searchPage.css
+++ b/src/main/resources/static/searchPage.css
@@ -1,22 +1,55 @@
-.form-container {
-	display: inline-block;
-	width: 50%;
-}
+		.container {
+		margin-top: 70px;
+			display: flex; /* Use flexbox */
+			flex-direction: row; /* Display child elements in a row */
+			justify-content: space-between; /* Add space between child elements */
+		}
 
-.info_container_discount {
-	display: inline-block;
-}
+		.container div {
+			background-color: #f2f2f2;
+			padding: 20px;
+			margin: 20px;
+			width: 45%;
+			box-shadow: 0 4px 8px 0 rgba(0,0,0,0.2);
+			border-radius: 5px;
+		}
 
-.phraseInfo-and-discount-info {
-	display: inline-block;
-	width: 50%;
-}
+		.container div h2 {
+			margin-top: 0;
+		}
 
-.info_component {
-	display: inline-block;
-}
+		.container form input {
+			display: block;
+			margin-bottom: 10px;
+			padding: 10px;
+			border-radius: 5px;
+			border: 1px solid #ccc;
+			width: 100%;
+			box-sizing: border-box;
+			font-size: 16px;
+		}
 
-.filters {
-	display: inline-block;
-	width: 50%;
-}
+		.container form button {
+			background-color: #4CAF50;
+			color: white;
+			padding: 10px 20px;
+			border: none;
+			border-radius: 5px;
+			cursor: pointer;
+			font-size: 16px;
+		}
+
+		.container form button:hover {
+			background-color: #3e8e41;
+		}
+		
+				.radio-container {
+			display: inline-block;
+			width: 100%;
+		}
+
+		.radio-container label {
+			display: inline-block;
+			margin-right: 5px;
+			font-size: 10px;
+		}
