--- a/src/main/resources/templates/searchPage.html
+++ b/src/main/resources/templates/searchPage.html
@@ -27,7 +27,44 @@
 		<div th:replace="~{fragments/dropdownCart :: dropdown-shopping-cart}"></div>
 	</header>
 
-	<div class="info_component">
+	<div class="container">
+		<div>
+			<form th:action="@{/applyDiscount}" th:method="post"
+				id="applyDiscount">
+				<p class="h5 infoText" th:text="#{searchValue}"></p>
+				<h2>[[${searchValue}]]</h2>
+				<input class="form-control-lg" type="number" min="0" max="100"
+					step="1" th:placeholder="${discountValue}" th:value="*{discountV}"
+					name="value" /> <input type="hidden" name="currentURL"
+					th:value="${currentURL}" />
+				<button type="submit" value="submit" th:text="ENTER"></button>
+			</form>
+			<br>
+			<form th:action="@{/resetDiscount}" th:method="get"
+				id="resetDiscount">
+				<input type="hidden" name="currentURL" th:value="${currentURL}" />
+				<button type="submit" value="submit" th:text="RESET"></button>
+			</form>
+		</div>
+
+		<div class="filter-container">
+			<h2>[[#{filter}]]</h2>
+			<form th:action="@{/filter}" th:method="post">
+				<div class="radio-container">
+					<label th:each="model : ${T(com.bmxApp.enums.Shop).values()}">
+						<input type="radio" th:name="shop" th:value="${model}"> <span
+						th:text="${model}"></span>
+					</label> <input type="hidden" th:name="currentURL" th:value="${currentURL}" />
+					<input type="hidden" th:name="value" th:value="${searchValue}" />
+					<br>
+				</div>
+				<button class="btn btn-primary" type="submit"
+					th:text="#{applyButton}"></button>
+			</form>
+		</div>
+	</div>
+
+	<!--  <div class="info_component">
 		<div class="phraseInfo-and-discount-info">
 			<div id="info_container_1">
 				<p class="h5 infoText" th:text="#{searchValue}"></p>
@@ -57,7 +94,7 @@
 			<p class="h5 infoText" th:text="#{searchValue}"></p>
 		</div>
 		<br>
-	</div>
+	</div>-->
 
 	<section class="products" id="productsPage">
 		<div id="product_container">
