Add sort in searcher pad

--- a/src/main/resources/templates/fragments/search.html
+++ b/src/main/resources/templates/fragments/search.html
@@ -1,5 +1,5 @@
 <div th:fragment="dropdown-search">
-	<form th:action="@{/cartSearch}" th:method="get">
+	<form th:action="@{/requestProducts}" th:method="get">
 		<div class="input-group rounded">
 			<input type="search" name="value" class="form-control rounded"
 				placeholder="Search" aria-label="Search"
