--- a/src/main/resources/templates/products.html
+++ b/src/main/resources/templates/products.html
@@ -36,11 +36,12 @@
 			<p class="h5 infoText" id="category" th:text="#{${category}}"></p>
 		</div>
 		<div id="info_container_3">
-			<form th:action="@{/searchDiscount}" th:method="post">
+			<form th:action="@{/searchDiscount}" th:method="get">
 				<input class="form-control-lg" type="number" min="0" max="100"
 					step="1" th:placeholder="${discountValue}" th:value="*{discountV}"
-					name="discountValue" /> <input type="hidden" name="currentURL"
-					th:value="${currentURL}" />
+					name="discountValue" /> <input type="hidden" name="category"
+					th:value="${category}" /> <input type="hidden" name="shop"
+					th:value="${shopName}" />
 				<button type="submit" value="submit" th:text="ENTER"></button>
 			</form>
 		</div>
@@ -53,9 +54,9 @@
 					<tr>
 						<th scope="col">[[#{name}]]
 							<form th:action="@{/search}" th:method="get">
-								<input type="hidden" name="shop" th:value="*{shopName}" />
-								<input type="hidden" name="category" th:value="*{category}"/>
-								<input type="hidden" name="sortBy" th:value="name"/>
+								<input type="hidden" name="shop" th:value="*{shopName}" /> <input
+									type="hidden" name="category" th:value="*{category}" /> <input
+									type="hidden" name="sortBy" th:value="name" />
 								<button type="submit" value="submit">
 									<i class="fa-solid fa-sort"></i>
 								</button>
@@ -63,9 +64,9 @@
 						</th>
 						<th scope="col">[[#{price}]]
 							<form th:action="@{/search}" th:method="get">
-								<input type="hidden" name="shop" th:value="*{shopName}" />
-								<input type="hidden" name="category" th:value="*{category}"/>
-								<input type="hidden" name="sortBy" th:value="price"/>
+								<input type="hidden" name="shop" th:value="*{shopName}" /> <input
+									type="hidden" name="category" th:value="*{category}" /> <input
+									type="hidden" name="sortBy" th:value="price" />
 								<button type="submit" value="submit">
 									<i class="fa-solid fa-sort"></i>
 								</button>
