--- a/src/main/resources/templates/searchPage.html
+++ b/src/main/resources/templates/searchPage.html
@@ -46,10 +46,28 @@
 				<button type="submit" value="submit" th:text="RESET"></button>
 			</form>
 		</div>
+				<div class="filter-container">
+		 <form method="GET" action="/search">
 
-		<div class="filter-container">
-			<h2>[[#{filter}]]</h2>
-			<form th:action="@{/filter}" th:method="get">
+  <h1 style="color:black;"><label for="shops">[[#{shops}]]:</label> </h1>
+  <select name="#{shops}" id="shops">
+    <option th:name="${shop}" th:value="">[[#{allShops}]]</option>
+    <option th:each="shop : ${T(com.bmxApp.enums.Shop).getShops()}" th:value="${shop}" th:text="${shop}"></option>
+  </select>
+<br>
+<br>
+  <h1 style="color:black;"><label for="price-range">[[#{price}]]:</label></h1>
+  <input type="number" th:name="minPrice" id="min-price" th:placeholder="#{minimalPrice}" th:value="${minPrice}">
+  <input type="number" th:name="maxPrice" id="max-price" th:placeholder="#{maxPrice}" th:value="${maxPrice}">
+
+  <button type="submit">ENTER</button>
+</form>
+	</div>	 
+<!-- 
+<form th:action="@{/filter}" th:method="get">
+
+			<h2>[[#{shops}]]</h2>
+			<!-- <form th:action="@{/filter}" th:method="get">
 				<div class="radio-container">
 					<label th:each="model : ${T(com.bmxApp.enums.Shop).values()}">
 						<input type="radio" th:name="filterValue" th:value="${model}">
@@ -59,9 +77,29 @@
 				</div>
 				<button class="btn btn-primary" type="submit"
 					th:text="#{applyButton}"></button>
-			</form>
+			<!--  </form> 
 		</div>
+
+		<div class="filter-container">
+			<h2>[[#{price}]]</h2>
+			<!--  <form th:action="@{/filter}" th:method="get">
+				<div class="radio-container">
+					<input type="number" class="border-input" th:name="lowerBorder"
+						th:value="${lowerBorder}" th:placeholder="${lowerBorder}">
+					<h1 style="color: black;">&#8595 &#8595 &#8595</h1>
+					<input type="number" class="border-input" th:name="upperBorder"
+						th:value="${upperBorder}" th:placeholder="${upperBorder}"> <input
+						type="hidden" th:name="filter" value="price"> <input
+						type="hidden" th:name="value" th:value="${searchValue}" /> <br>
+				</div>
+				<button class="btn btn-primary" type="submit"
+					th:text="#{applyButton}"></button>
+			<!--  </form> 
+		</div>
+		</form>
+		 -->
 	</div>
+	
 
 	<section class="products" id="productsPage">
 		<div id="product_container">
