--- a/src/main/resources/templates/searchPage.html
+++ b/src/main/resources/templates/searchPage.html
@@ -58,7 +58,7 @@
 				<select th:name="shop" id="shops">
 					<option id="allShops" value="#{allShops}">[[#{allShops}]]</option>
 					<option th:each="shop : ${T(com.bmxApp.enums.Shop).getShops()}"
-						th:value="${shop}" th:text="${shop}"></option>
+						th:value="${shop}" th:text="${shop}" th:selected="${shop.name().equals(shopName)}"></option>
 				</select> <br> <br>
 				<h1 style="color: black; font-size: 25px;">
 					<label for="categories">[[#{category}]]:</label>
@@ -66,7 +66,7 @@
 				<select th:name="category" id="categories">
 					<option id="allCategory">[[#{allCategory}]]</option>
 					<option th:each="category : ${T(com.bmxApp.enums.Part).values()}"
-						th:value="${category}" th:text="${category.value}"></option>
+						th:value="${category}" th:text="${category.value}" th:selected="${category.name().equalsIgnoreCase(categoryName)}"></option>
 				</select> <br> <br>
 				<h1 style="color: black; font-size: 25px;">
 					<label for="price-range">[[#{price}]]:</label>
@@ -88,10 +88,10 @@
 				<thead>
 					<tr>
 						<th scope="col">[[#{name}]]
-							<form th:action="@{/sort}" th:method="get">
-								<input type="hidden" name="value" th:value="${searchValue}" />
-								<input type="hidden" name="sortBy" th:value="name" />
-								<input type="hidden" name="products" th:value="${products}"/>
+							<form th:action="@{/sortFilter}" th:method="get">
+								 <input
+									type="hidden" name="searchValue" th:value="${searchValue}" />
+								<input type="hidden" name="sortBy" th:value="name" /> 
 								<button type="submit" value="submit">
 									<i class="fa-solid fa-sort"></i>
 								</button>
@@ -99,8 +99,9 @@
 						</th>
 						<th scope="col">[[#{shopNameTh}]]
 							<form th:action="@{/requestProducts}" th:method="get">
-								<input type="hidden" name="value" th:value="${searchValue}" />
-								<input type="hidden" name="sortBy" th:value="shop" />
+								<input type="hidden" name="searchValue"
+									th:value="${searchValue}" /> <input type="hidden"
+									name="sortBy" th:value="shop" />
 								<button type="submit" value="submit">
 									<i class="fa-solid fa-sort"></i>
 								</button>
@@ -108,8 +109,9 @@
 						</th>
 						<th scope="col">[[#{price}]]
 							<form th:action="@{/requestProducts}" th:method="get">
-								<input type="hidden" name="value" th:value="${searchValue}" />
-								<input type="hidden" name="sortBy" th:value="price" />
+								<input type="hidden" name="searchValue"
+									th:value="${searchValue}" /> <input type="hidden"
+									name="sortBy" th:value="price" />
 								<button type="submit" value="submit">
 									<i class="fa-solid fa-sort"></i>
 								</button>
