--- a/src/main/resources/templates/searchPage.html
+++ b/src/main/resources/templates/searchPage.html
@@ -58,7 +58,8 @@
 				<select th:name="shop" id="shops">
 					<option id="allShops" value="#{allShops}">[[#{allShops}]]</option>
 					<option th:each="shop : ${T(com.bmxApp.enums.Shop).getShops()}"
-						th:value="${shop}" th:text="${shop}" th:selected="${shop.name().equals(shopName)}"></option>
+						th:value="${shop}" th:text="${shop}"
+						th:selected="${shop.name().equals(shopName)}"></option>
 				</select> <br> <br>
 				<h1 style="color: black; font-size: 25px;">
 					<label for="categories">[[#{category}]]:</label>
@@ -66,7 +67,8 @@
 				<select th:name="category" id="categories">
 					<option id="allCategory">[[#{allCategory}]]</option>
 					<option th:each="category : ${T(com.bmxApp.enums.Part).values()}"
-						th:value="${category}" th:text="${category.value}" th:selected="${category.name().equalsIgnoreCase(categoryName)}"></option>
+						th:value="${category}" th:text="${category.value}"
+						th:selected="${category.name().equalsIgnoreCase(categoryName)}"></option>
 				</select> <br> <br>
 				<h1 style="color: black; font-size: 25px;">
 					<label for="price-range">[[#{price}]]:</label>
@@ -89,29 +91,26 @@
 					<tr>
 						<th scope="col">[[#{name}]]
 							<form th:action="@{/sortFilter}" th:method="get">
-								 <input
-									type="hidden" name="searchValue" th:value="${searchValue}" />
-								<input type="hidden" name="sortBy" th:value="name" /> 
+								<input type="hidden" name="sortedBy" th:value="name" /> <input
+									type="hidden" name="currentUrl" th:value="${currentUrl}" />
 								<button type="submit" value="submit">
 									<i class="fa-solid fa-sort"></i>
 								</button>
 							</form>
 						</th>
 						<th scope="col">[[#{shopNameTh}]]
-							<form th:action="@{/requestProducts}" th:method="get">
-								<input type="hidden" name="searchValue"
-									th:value="${searchValue}" /> <input type="hidden"
-									name="sortBy" th:value="shop" />
+							<form th:action="@{/sortFilter}" th:method="shop">
+								<input type="hidden" name="sortedBy" th:value="name" /> <input
+									type="hidden" name="currentUrl" th:value="${currentUrl}" />
 								<button type="submit" value="submit">
 									<i class="fa-solid fa-sort"></i>
 								</button>
 							</form>
 						</th>
 						<th scope="col">[[#{price}]]
-							<form th:action="@{/requestProducts}" th:method="get">
-								<input type="hidden" name="searchValue"
-									th:value="${searchValue}" /> <input type="hidden"
-									name="sortBy" th:value="price" />
+							<form th:action="@{/sortFilter}" th:method="get">
+								<input type="hidden" name="sortedBy" th:value="price" /> <input
+									type="hidden" name="currentUrl" th:value="${currentUrl}" />
 								<button type="submit" value="submit">
 									<i class="fa-solid fa-sort"></i>
 								</button>
