--- a/src/main/resources/templates/searchPage.html
+++ b/src/main/resources/templates/searchPage.html
@@ -34,7 +34,7 @@
 				<p class="h5 infoText" th:text="#{searchValue}"></p>
 				<h2>[[${searchValue}]]</h2>
 				<input class="form-control-lg" type="number" min="0" max="100"
-					step="1" th:placeholder="${discountValue}" th:value="*{discountValue}"
+					step="1" th:placeholder="${discountValue}" th:value="${discountValue}"
 					name="discountValue" /> <input type="hidden" name="currentUrl"
 					th:value="${currentUrl}" />
 				<button type="submit" value="submit" th:text="ENTER"></button>
