--- a/src/main/resources/templates/products.html
+++ b/src/main/resources/templates/products.html
@@ -36,12 +36,11 @@
 			<p class="h5 infoText" id="category" th:text="#{${category}}"></p>
 		</div>
 		<div id="info_container_3">
-			<form th:action="@{/search}" th:method="get">
+			<form th:action="@{/applyDiscount}" th:method="get">
 				<input class="form-control-lg" type="number" min="0" max="100"
 					step="1" th:placeholder="${discountValue}" th:value="${discountValue}"
-					name="discountValue" /> <input type="hidden" name="category"
-					th:value="${category}" /> <input type="hidden" name="shop"
-					th:value="${shopName}" />
+					name="discountValue" /> <input type="hidden" name="currentUrl"
+					th:value="${currentUrl}" /> 
 				<button type="submit" value="submit" th:text="ENTER"></button>
 			</form>
 		</div>
@@ -98,7 +97,7 @@
 									th:attr="name='url'" th:value="${product.getUrl()}" /> <input
 									type="hidden" th:attr="name='imageUrl'"
 									th:value="${product.getImageUrl()}" /> <input type="hidden"
-									name="currentURL" th:value="${currentURL}" />
+									name="currentUrl" th:value="${currentUrl}" />
 								<button type="submit" value="submit" th:text="#{addBasket}"></button>
 							</form></td>
 					</tr>
