Add reset discount

--- a/src/main/resources/templates/searchPage.html
+++ b/src/main/resources/templates/searchPage.html
@@ -42,7 +42,7 @@
 			<br>
 			<form th:action="@{/resetDiscount}" th:method="get"
 				id="resetDiscount">
-				<input type="hidden" name="currentURL" th:value="${currentURL}" />
+				<input type="hidden" name="currentUrl" th:value="${currentUrl}" />
 				<button type="submit" value="submit" th:text="RESET"></button>
 			</form>
 		</div>
