--- a/src/main/resources/templates/products.html
+++ b/src/main/resources/templates/products.html
@@ -38,10 +38,15 @@
 		<div id="info_container_3">
 			<form th:action="@{/applyDiscount}" th:method="get">
 				<input class="form-control-lg" type="number" min="0" max="100"
-					step="1" th:placeholder="${discountValue}" th:value="${discountValue}"
-					name="discountValue" /> <input type="hidden" name="currentUrl"
-					th:value="${currentUrl}" /> 
+					step="1" th:placeholder="${discountValue}"
+					th:value="${discountValue}" name="discountValue" /> <input
+					type="hidden" name="currentUrl" th:value="${currentUrl}" />
 				<button type="submit" value="submit" th:text="ENTER"></button>
+			</form>
+			<form th:action="@{/resetDiscount}" th:method="get"
+				id="resetDiscount">
+				<input type="hidden" name="currentUrl" th:value="${currentUrl}" />
+				<button type="submit" value="submit" th:text="RESET"></button>
 			</form>
 		</div>
 	</section>
